--- a/07-私人通讯录/Base.lproj/Main.storyboard
+++ b/07-私人通讯录/Base.lproj/Main.storyboard
@@ -1,25 +1,149 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background_phone" translatesAutoresizingMaskIntoConstraints="NO" id="xZs-S3-BJR">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <animations/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DP5-Rq-n0P" userLabel="登录View">
+                                <rect key="frame" x="-4" y="40" width="328" height="244"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="帐号" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ops-KM-o7w">
+                                        <rect key="frame" x="30" y="24" width="34" height="20.5"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zul-Hi-VjU">
+                                        <rect key="frame" x="30" y="85" width="34" height="20.5"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GoN-3M-T6o" userLabel="帐号输入框">
+                                        <rect key="frame" x="89" y="20" width="150" height="30"/>
+                                        <animations/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="150" id="ZdD-Lx-Ra3"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Noh-KE-tca" userLabel="密码输入框">
+                                        <rect key="frame" x="89" y="80" width="150" height="30"/>
+                                        <animations/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QCu-YS-Zz1">
+                                        <rect key="frame" x="4" y="156" width="320" height="44"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="记住密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wqi-jP-55x">
+                                                <rect key="frame" x="13" y="11" width="82" height="21"/>
+                                                <animations/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Spl-iT-iry" userLabel="记住密码Switch">
+                                                <rect key="frame" x="89" y="6" width="51" height="31"/>
+                                                <animations/>
+                                            </switch>
+                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Jf2-Ay-9D6" userLabel="自动登录Switch">
+                                                <rect key="frame" x="251" y="6" width="51" height="31"/>
+                                                <animations/>
+                                            </switch>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="自动登录" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hev-HF-EDX">
+                                                <rect key="frame" x="163" y="11" width="68" height="21"/>
+                                                <animations/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <animations/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="320" id="adF-uZ-Kia"/>
+                                            <constraint firstAttribute="height" constant="44" id="xvg-x6-94f"/>
+                                        </constraints>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Cd-VU-Qfo">
+                                        <rect key="frame" x="104" y="208" width="30" height="30"/>
+                                        <animations/>
+                                        <state key="normal" title="登录"/>
+                                        <connections>
+                                            <action selector="loginBtnClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Olg-lb-OLs"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="18Z-x8-Bvv">
+                                        <rect key="frame" x="183" y="208" width="30" height="30"/>
+                                        <animations/>
+                                        <state key="normal" title="注册"/>
+                                    </button>
+                                </subviews>
+                                <animations/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="GoN-3M-T6o" firstAttribute="height" secondItem="Noh-KE-tca" secondAttribute="height" id="423-VZ-z7N"/>
+                                    <constraint firstItem="GoN-3M-T6o" firstAttribute="width" secondItem="Noh-KE-tca" secondAttribute="width" id="6Dy-Wc-7l6"/>
+                                    <constraint firstItem="GoN-3M-T6o" firstAttribute="centerX" secondItem="DP5-Rq-n0P" secondAttribute="centerX" id="Acx-gv-DbQ"/>
+                                    <constraint firstItem="GoN-3M-T6o" firstAttribute="leading" secondItem="Ops-KM-o7w" secondAttribute="trailing" constant="25" id="CxE-rR-JY9"/>
+                                    <constraint firstItem="Noh-KE-tca" firstAttribute="top" secondItem="GoN-3M-T6o" secondAttribute="bottom" constant="30" id="DF1-KJ-Yaj"/>
+                                    <constraint firstAttribute="height" constant="244" id="IKP-0d-SsC"/>
+                                    <constraint firstItem="GoN-3M-T6o" firstAttribute="centerX" secondItem="Noh-KE-tca" secondAttribute="centerX" id="IzJ-Nx-Lj2"/>
+                                    <constraint firstItem="Noh-KE-tca" firstAttribute="leading" secondItem="zul-Hi-VjU" secondAttribute="trailing" constant="25" id="LFh-Hu-mWI"/>
+                                    <constraint firstItem="Noh-KE-tca" firstAttribute="centerY" secondItem="zul-Hi-VjU" secondAttribute="centerY" id="LTa-Pd-Ocy"/>
+                                    <constraint firstItem="GoN-3M-T6o" firstAttribute="top" secondItem="DP5-Rq-n0P" secondAttribute="top" constant="20" id="Md3-wh-X7A"/>
+                                    <constraint firstItem="QCu-YS-Zz1" firstAttribute="centerX" secondItem="Noh-KE-tca" secondAttribute="centerX" id="Ny1-2n-SO3"/>
+                                    <constraint firstAttribute="bottom" secondItem="QCu-YS-Zz1" secondAttribute="bottom" constant="44" id="fik-WY-pBt"/>
+                                    <constraint firstItem="GoN-3M-T6o" firstAttribute="centerY" secondItem="Ops-KM-o7w" secondAttribute="centerY" id="nn9-Si-2fv"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="DP5-Rq-n0P" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="8mm-dg-sTd"/>
+                            <constraint firstAttribute="trailing" secondItem="xZs-S3-BJR" secondAttribute="trailing" id="BuD-km-MDV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="DP5-Rq-n0P" secondAttribute="trailing" constant="-20" id="PaY-WV-esZ"/>
+                            <constraint firstItem="xZs-S3-BJR" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Rtt-Kc-j8W"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xZs-S3-BJR" secondAttribute="bottom" id="mnp-qQ-aXY"/>
+                            <constraint firstItem="xZs-S3-BJR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="mxK-5a-W4O"/>
+                            <constraint firstItem="DP5-Rq-n0P" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="rud-bJ-kSl"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="accountField" destination="GoN-3M-T6o" id="TBl-Fa-mvn"/>
+                        <outlet property="loginBtn" destination="2Cd-VU-Qfo" id="EgT-6e-yfz"/>
+                        <outlet property="passwordField" destination="Noh-KE-tca" id="3OA-O1-dNX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="144" y="294"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="background_phone" width="320" height="568"/>
+    </resources>
 </document>
