--- a/07-私人通讯录/Base.lproj/Main.storyboard
+++ b/07-私人通讯录/Base.lproj/Main.storyboard
@@ -29,14 +29,14 @@
                                         <rect key="frame" x="30" y="24" width="34" height="20.5"/>
                                         <animations/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zul-Hi-VjU">
                                         <rect key="frame" x="30" y="85" width="34" height="20.5"/>
                                         <animations/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GoN-3M-T6o" userLabel="帐号输入框">
@@ -61,22 +61,28 @@
                                                 <rect key="frame" x="13" y="11" width="82" height="21"/>
                                                 <animations/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Spl-iT-iry" userLabel="记住密码Switch">
                                                 <rect key="frame" x="89" y="6" width="51" height="31"/>
                                                 <animations/>
+                                                <connections>
+                                                    <action selector="remeberPwdSwitchChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="Eeb-Lo-yoj"/>
+                                                </connections>
                                             </switch>
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Jf2-Ay-9D6" userLabel="自动登录Switch">
                                                 <rect key="frame" x="251" y="6" width="51" height="31"/>
                                                 <animations/>
+                                                <connections>
+                                                    <action selector="autoLoginSwitchChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="zlB-hQ-AYk"/>
+                                                </connections>
                                             </switch>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="自动登录" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hev-HF-EDX">
                                                 <rect key="frame" x="163" y="11" width="68" height="21"/>
                                                 <animations/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
@@ -134,8 +140,10 @@
                     </view>
                     <connections>
                         <outlet property="accountField" destination="GoN-3M-T6o" id="TBl-Fa-mvn"/>
+                        <outlet property="autoLoginSwitch" destination="Jf2-Ay-9D6" id="Lws-v5-J9J"/>
                         <outlet property="loginBtn" destination="2Cd-VU-Qfo" id="EgT-6e-yfz"/>
                         <outlet property="passwordField" destination="Noh-KE-tca" id="3OA-O1-dNX"/>
+                        <outlet property="remeberPwdSwitch" destination="Spl-iT-iry" id="E6i-S9-FZF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
