--- a/07-私人通讯录/Base.lproj/Main.storyboard
+++ b/07-私人通讯录/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="SAQ-E9-hbU">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
@@ -18,12 +18,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background_phone" translatesAutoresizingMaskIntoConstraints="NO" id="xZs-S3-BJR">
-                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background_phone" translatesAutoresizingMaskIntoConstraints="NO" id="Jax-f6-wGd">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <animations/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DP5-Rq-n0P" userLabel="登录View">
-                                <rect key="frame" x="-4" y="40" width="328" height="244"/>
+                                <rect key="frame" x="-4" y="64" width="328" height="244"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="帐号" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ops-KM-o7w">
                                         <rect key="frame" x="30" y="24" width="34" height="20.5"/>
@@ -129,24 +129,95 @@
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Jax-f6-wGd" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="2SE-3F-C0g"/>
                             <constraint firstItem="DP5-Rq-n0P" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="8mm-dg-sTd"/>
-                            <constraint firstAttribute="trailing" secondItem="xZs-S3-BJR" secondAttribute="trailing" id="BuD-km-MDV"/>
+                            <constraint firstItem="Jax-f6-wGd" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Gyx-aR-5zV"/>
+                            <constraint firstAttribute="trailing" secondItem="Jax-f6-wGd" secondAttribute="trailing" id="J6c-4Q-3Mf"/>
                             <constraint firstAttribute="trailingMargin" secondItem="DP5-Rq-n0P" secondAttribute="trailing" constant="-20" id="PaY-WV-esZ"/>
-                            <constraint firstItem="xZs-S3-BJR" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Rtt-Kc-j8W"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xZs-S3-BJR" secondAttribute="bottom" id="mnp-qQ-aXY"/>
-                            <constraint firstItem="xZs-S3-BJR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="mxK-5a-W4O"/>
-                            <constraint firstItem="DP5-Rq-n0P" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="rud-bJ-kSl"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Jax-f6-wGd" secondAttribute="bottom" id="buO-Zj-JpQ"/>
+                            <constraint firstItem="DP5-Rq-n0P" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="rud-bJ-kSl"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="3EF-fY-Y1i"/>
                     <connections>
                         <outlet property="accountField" destination="GoN-3M-T6o" id="TBl-Fa-mvn"/>
                         <outlet property="autoLoginSwitch" destination="Jf2-Ay-9D6" id="Lws-v5-J9J"/>
                         <outlet property="loginBtn" destination="2Cd-VU-Qfo" id="EgT-6e-yfz"/>
                         <outlet property="passwordField" destination="Noh-KE-tca" id="3OA-O1-dNX"/>
                         <outlet property="remeberPwdSwitch" destination="Spl-iT-iry" id="E6i-S9-FZF"/>
+                        <segue destination="xMT-Ag-jNt" kind="push" identifier="toContact" id="yUD-Ig-S9z"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="588" y="301"/>
+        </scene>
+        <!--联系人列表-->
+        <scene sceneID="w6G-9Y-GCT">
+            <objects>
+                <viewController id="xMT-Ag-jNt" customClass="ContactViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="izB-gD-Ynz"/>
+                        <viewControllerLayoutGuide type="bottom" id="hJo-k3-Csn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Lph-dS-fwZ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="联系人列表" id="Scc-Kx-Kuc">
+                        <barButtonItem key="leftBarButtonItem" title="注销" id="2eE-Yp-say"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="XP7-lp-vX1">
+                            <connections>
+                                <action selector="AddContact:" destination="xMT-Ag-jNt" id="4Fw-4P-f2u"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="KqQ-hG-M3r" kind="push" identifier="toAddContact" id="YvH-Yx-XSa"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TGh-hd-QSR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="992" y="297"/>
+        </scene>
+        <!--添加联系人-->
+        <scene sceneID="Zvr-qa-fvD">
+            <objects>
+                <viewController id="KqQ-hG-M3r" customClass="AddContactViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="8v5-J4-Kx9"/>
+                        <viewControllerLayoutGuide type="bottom" id="FGy-nE-n8O"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="wQY-kP-0dc">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" red="0.20668864170000001" green="0.66666666669999997" blue="0.18944853310000001" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="添加联系人" id="Cga-8H-JR8"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MDY-oc-A2X" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1388" y="301"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="x9G-vs-1BI">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SAQ-E9-hbU" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Pix-xz-YiE">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="7uC-Gc-dAZ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NrT-ub-0CX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="144" y="294"/>
         </scene>
